deploy: 58bbaa6afe2c5b2e9294ce5bb322c1fdcf978273

--- a/02-gitbasics.ipynb
+++ b/02-gitbasics.ipynb
@@ -207,10 +207,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.409424Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.408881Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.435576Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.436118Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.103804Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.103164Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.136757Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.136151Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -392,10 +392,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.440841Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.440338Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.475950Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.476936Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.141355Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.140569Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.175842Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.177152Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -580,10 +580,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.483688Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.482645Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.492704Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.493212Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.182915Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.180972Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.194134Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.193442Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -627,10 +627,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.501874Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.497423Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.548176Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.547737Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.200020Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.197728Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.249376Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.249793Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -656,10 +656,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.554542Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.551604Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.564497Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.564057Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.258813Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.257848Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.266807Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.267558Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -707,10 +707,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.568326Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.567686Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.579858Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.580367Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.271943Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.271106Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.285001Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.284245Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -740,10 +740,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.584911Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.584241Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.594798Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.595318Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.292749Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.291914Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.300553Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.300995Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -771,10 +771,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.602240Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.601511Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.609191Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.609628Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.309176Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.308474Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.318959Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.319850Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -791,10 +791,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.615285Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.613618Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.625047Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.625504Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.335442Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.334281Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.348983Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.348361Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -885,10 +885,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.631570Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.630603Z",
-     "iopub.status.idle": "2020-09-10T20:36:28.877600Z",
-     "shell.execute_reply": "2020-09-10T20:36:28.877039Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.354167Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.353004Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.599815Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.599124Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -954,10 +954,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:28.884803Z",
-     "iopub.status.busy": "2020-09-10T20:36:28.884047Z",
-     "iopub.status.idle": "2020-09-10T20:36:29.001610Z",
-     "shell.execute_reply": "2020-09-10T20:36:29.001150Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.607448Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.606861Z",
+     "iopub.status.idle": "2020-09-10T20:40:52.730994Z",
+     "shell.execute_reply": "2020-09-10T20:40:52.730477Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1011,10 +1011,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:29.007879Z",
-     "iopub.status.busy": "2020-09-10T20:36:29.005027Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.099233Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.099686Z"
+     "iopub.execute_input": "2020-09-10T20:40:52.736956Z",
+     "iopub.status.busy": "2020-09-10T20:40:52.734520Z",
+     "iopub.status.idle": "2020-09-10T20:40:53.893896Z",
+     "shell.execute_reply": "2020-09-10T20:40:53.894373Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1026,10 +1026,7 @@
      "output_type": "stream",
      "text": [
       "Your branch is up to date with 'origin/master'.\n",
-      "Updating f2cd415..58bbaa6\n",
-      "Fast-forward\n",
-      " nbcourse.yml | 2 +-\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
+      "Already up to date.\n"
      ]
     },
     {
@@ -1038,7 +1035,6 @@
      "text": [
       "Switched to branch 'master'\n",
       "From https://github.com/pnavaro/agrocampus\n",
-      "   f2cd415..58bbaa6  master     -> origin/master\n",
       " * [new branch]      gh-pages   -> origin/gh-pages\n"
      ]
     }
@@ -1055,10 +1051,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.106181Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.103811Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.124573Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.124985Z"
+     "iopub.execute_input": "2020-09-10T20:40:53.902201Z",
+     "iopub.status.busy": "2020-09-10T20:40:53.900706Z",
+     "iopub.status.idle": "2020-09-10T20:40:53.916545Z",
+     "shell.execute_reply": "2020-09-10T20:40:53.917029Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1069,10 +1065,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updating f2cd415..58bbaa6\n",
-      "Fast-forward\n",
-      " nbcourse.yml | 2 +-\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
+      "Already up to date.\n"
      ]
     },
     {
@@ -1168,10 +1161,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.132006Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.128725Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.157019Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.156540Z"
+     "iopub.execute_input": "2020-09-10T20:40:53.923318Z",
+     "iopub.status.busy": "2020-09-10T20:40:53.920876Z",
+     "iopub.status.idle": "2020-09-10T20:40:53.948267Z",
+     "shell.execute_reply": "2020-09-10T20:40:53.948872Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1220,10 +1213,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.164023Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.160516Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.188343Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.189205Z"
+     "iopub.execute_input": "2020-09-10T20:40:53.955404Z",
+     "iopub.status.busy": "2020-09-10T20:40:53.954289Z",
+     "iopub.status.idle": "2020-09-10T20:40:53.975049Z",
+     "shell.execute_reply": "2020-09-10T20:40:53.975928Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1275,10 +1268,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.196143Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.195455Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.221385Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.220800Z"
+     "iopub.execute_input": "2020-09-10T20:40:53.981098Z",
+     "iopub.status.busy": "2020-09-10T20:40:53.979591Z",
+     "iopub.status.idle": "2020-09-10T20:40:54.006382Z",
+     "shell.execute_reply": "2020-09-10T20:40:54.007307Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -1368,10 +1361,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.229069Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.225235Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.255285Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.256259Z"
+     "iopub.execute_input": "2020-09-10T20:40:54.012757Z",
+     "iopub.status.busy": "2020-09-10T20:40:54.010737Z",
+     "iopub.status.idle": "2020-09-10T20:40:54.036180Z",
+     "shell.execute_reply": "2020-09-10T20:40:54.035207Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -1425,10 +1418,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:30.264211Z",
-     "iopub.status.busy": "2020-09-10T20:36:30.260326Z",
-     "iopub.status.idle": "2020-09-10T20:36:30.274899Z",
-     "shell.execute_reply": "2020-09-10T20:36:30.275717Z"
+     "iopub.execute_input": "2020-09-10T20:40:54.041385Z",
+     "iopub.status.busy": "2020-09-10T20:40:54.039566Z",
+     "iopub.status.idle": "2020-09-10T20:40:54.051690Z",
+     "shell.execute_reply": "2020-09-10T20:40:54.051208Z"
     },
     "slideshow": {
      "slide_type": "fragment"
