--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:33.087578Z",
-     "iopub.status.busy": "2020-09-10T20:36:33.087053Z",
-     "iopub.status.idle": "2020-09-10T20:36:33.093561Z",
-     "shell.execute_reply": "2020-09-10T20:36:33.093048Z"
+     "iopub.execute_input": "2020-09-10T20:40:57.011447Z",
+     "iopub.status.busy": "2020-09-10T20:40:57.010636Z",
+     "iopub.status.idle": "2020-09-10T20:40:57.013639Z",
+     "shell.execute_reply": "2020-09-10T20:40:57.012820Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -76,10 +76,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:33.098861Z",
-     "iopub.status.busy": "2020-09-10T20:36:33.097319Z",
-     "iopub.status.idle": "2020-09-10T20:36:33.099708Z",
-     "shell.execute_reply": "2020-09-10T20:36:33.101327Z"
+     "iopub.execute_input": "2020-09-10T20:40:57.018256Z",
+     "iopub.status.busy": "2020-09-10T20:40:57.016924Z",
+     "iopub.status.idle": "2020-09-10T20:40:57.018874Z",
+     "shell.execute_reply": "2020-09-10T20:40:57.019336Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -95,25 +95,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:33.105413Z",
-     "iopub.status.busy": "2020-09-10T20:36:33.104876Z",
-     "iopub.status.idle": "2020-09-10T20:36:40.057687Z",
-     "shell.execute_reply": "2020-09-10T20:36:40.056837Z"
+     "iopub.execute_input": "2020-09-10T20:40:57.024235Z",
+     "iopub.status.busy": "2020-09-10T20:40:57.023411Z",
+     "iopub.status.idle": "2020-09-10T20:41:02.680366Z",
+     "shell.execute_reply": "2020-09-10T20:41:02.679819Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -127,10 +119,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:40.073696Z",
-     "iopub.status.busy": "2020-09-10T20:36:40.072403Z",
-     "iopub.status.idle": "2020-09-10T20:36:40.075301Z",
-     "shell.execute_reply": "2020-09-10T20:36:40.075838Z"
+     "iopub.execute_input": "2020-09-10T20:41:02.693746Z",
+     "iopub.status.busy": "2020-09-10T20:41:02.693149Z",
+     "iopub.status.idle": "2020-09-10T20:41:02.696612Z",
+     "shell.execute_reply": "2020-09-10T20:41:02.697078Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -149,10 +141,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:40.081972Z",
-     "iopub.status.busy": "2020-09-10T20:36:40.080926Z",
-     "iopub.status.idle": "2020-09-10T20:36:40.083069Z",
-     "shell.execute_reply": "2020-09-10T20:36:40.083497Z"
+     "iopub.execute_input": "2020-09-10T20:41:02.702391Z",
+     "iopub.status.busy": "2020-09-10T20:41:02.701565Z",
+     "iopub.status.idle": "2020-09-10T20:41:02.704294Z",
+     "shell.execute_reply": "2020-09-10T20:41:02.703842Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -175,10 +167,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:40.089411Z",
-     "iopub.status.busy": "2020-09-10T20:36:40.088142Z",
-     "iopub.status.idle": "2020-09-10T20:36:40.090019Z",
-     "shell.execute_reply": "2020-09-10T20:36:40.090518Z"
+     "iopub.execute_input": "2020-09-10T20:41:02.709555Z",
+     "iopub.status.busy": "2020-09-10T20:41:02.708047Z",
+     "iopub.status.idle": "2020-09-10T20:41:02.710287Z",
+     "shell.execute_reply": "2020-09-10T20:41:02.710894Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -196,10 +188,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:36:40.107072Z",
-     "iopub.status.busy": "2020-09-10T20:36:40.106415Z",
-     "iopub.status.idle": "2020-09-10T20:36:40.390485Z",
-     "shell.execute_reply": "2020-09-10T20:36:40.390996Z"
+     "iopub.execute_input": "2020-09-10T20:41:02.728532Z",
+     "iopub.status.busy": "2020-09-10T20:41:02.728014Z",
+     "iopub.status.idle": "2020-09-10T20:41:03.026859Z",
+     "shell.execute_reply": "2020-09-10T20:41:03.027657Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -210,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f069722c370>"
+       "<matplotlib.collections.PathCollection at 0x7fc98b107340>"
       ]
      },
      "execution_count": 7,
