deploy: 616470c4f3ba216abc5d4a1fc6dc0254e4cf3fd1

--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:40:57.011447Z",
-     "iopub.status.busy": "2020-09-10T20:40:57.010636Z",
-     "iopub.status.idle": "2020-09-10T20:40:57.013639Z",
-     "shell.execute_reply": "2020-09-10T20:40:57.012820Z"
+     "iopub.execute_input": "2020-09-11T07:50:24.427706Z",
+     "iopub.status.busy": "2020-09-11T07:50:24.427107Z",
+     "iopub.status.idle": "2020-09-11T07:50:24.433474Z",
+     "shell.execute_reply": "2020-09-11T07:50:24.432962Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -76,10 +76,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:40:57.018256Z",
-     "iopub.status.busy": "2020-09-10T20:40:57.016924Z",
-     "iopub.status.idle": "2020-09-10T20:40:57.018874Z",
-     "shell.execute_reply": "2020-09-10T20:40:57.019336Z"
+     "iopub.execute_input": "2020-09-11T07:50:24.438548Z",
+     "iopub.status.busy": "2020-09-11T07:50:24.437049Z",
+     "iopub.status.idle": "2020-09-11T07:50:24.439228Z",
+     "shell.execute_reply": "2020-09-11T07:50:24.439678Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -95,17 +95,25 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:40:57.024235Z",
-     "iopub.status.busy": "2020-09-10T20:40:57.023411Z",
-     "iopub.status.idle": "2020-09-10T20:41:02.680366Z",
-     "shell.execute_reply": "2020-09-10T20:41:02.679819Z"
+     "iopub.execute_input": "2020-09-11T07:50:24.443659Z",
+     "iopub.status.busy": "2020-09-11T07:50:24.441851Z",
+     "iopub.status.idle": "2020-09-11T07:50:30.379737Z",
+     "shell.execute_reply": "2020-09-11T07:50:30.378795Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -119,10 +127,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:41:02.693746Z",
-     "iopub.status.busy": "2020-09-10T20:41:02.693149Z",
-     "iopub.status.idle": "2020-09-10T20:41:02.696612Z",
-     "shell.execute_reply": "2020-09-10T20:41:02.697078Z"
+     "iopub.execute_input": "2020-09-11T07:50:30.393154Z",
+     "iopub.status.busy": "2020-09-11T07:50:30.387321Z",
+     "iopub.status.idle": "2020-09-11T07:50:30.396176Z",
+     "shell.execute_reply": "2020-09-11T07:50:30.395704Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -141,10 +149,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:41:02.702391Z",
-     "iopub.status.busy": "2020-09-10T20:41:02.701565Z",
-     "iopub.status.idle": "2020-09-10T20:41:02.704294Z",
-     "shell.execute_reply": "2020-09-10T20:41:02.703842Z"
+     "iopub.execute_input": "2020-09-11T07:50:30.401022Z",
+     "iopub.status.busy": "2020-09-11T07:50:30.400065Z",
+     "iopub.status.idle": "2020-09-11T07:50:30.403417Z",
+     "shell.execute_reply": "2020-09-11T07:50:30.402996Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -167,10 +175,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:41:02.709555Z",
-     "iopub.status.busy": "2020-09-10T20:41:02.708047Z",
-     "iopub.status.idle": "2020-09-10T20:41:02.710287Z",
-     "shell.execute_reply": "2020-09-10T20:41:02.710894Z"
+     "iopub.execute_input": "2020-09-11T07:50:30.409293Z",
+     "iopub.status.busy": "2020-09-11T07:50:30.407895Z",
+     "iopub.status.idle": "2020-09-11T07:50:30.410065Z",
+     "shell.execute_reply": "2020-09-11T07:50:30.410497Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -188,10 +196,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-10T20:41:02.728532Z",
-     "iopub.status.busy": "2020-09-10T20:41:02.728014Z",
-     "iopub.status.idle": "2020-09-10T20:41:03.026859Z",
-     "shell.execute_reply": "2020-09-10T20:41:03.027657Z"
+     "iopub.execute_input": "2020-09-11T07:50:30.427684Z",
+     "iopub.status.busy": "2020-09-11T07:50:30.427159Z",
+     "iopub.status.idle": "2020-09-11T07:50:30.711672Z",
+     "shell.execute_reply": "2020-09-11T07:50:30.712260Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -202,7 +210,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fc98b107340>"
+       "<matplotlib.collections.PathCollection at 0x7f2639077370>"
       ]
      },
      "execution_count": 7,
