--- a/notebooks/01-jupyter.ipynb
+++ b/notebooks/01-jupyter.ipynb
@@ -52,7 +52,7 @@
     "de python qui sera disponible sera celle ou tous nos packages seront installés.\n",
     "<pre>\n",
     "$ conda activate agrocampus\n",
-    "(big-data) $ python\n",
+    "(agrocampus) $ python\n",
     "Python 3.6.2 (default, Jul 17 2017, 16:44:45) \n",
     "[GCC 4.2.1 Compatible Apple LLVM 8.1.0 (clang-802.0.42)] on darwin\n",
     "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
@@ -153,7 +153,7 @@
    "source": [
     "## Documentation\n",
     "\n",
-    "- Shift + Tab donne accès à la documentation des focntions"
+    "- Shift + Tab donne accès à la documentation des fonctions"
    ]
   },
   {
@@ -188,7 +188,7 @@
     }
    },
    "source": [
-    "Si vous passez la cellule suivant en *Code* et l'exécutez la documentation apparaît dans le *pager*"
+    "Si vous passez la cellule suivante en *Code* et l'exécutez, la documentation apparaît dans le *pager*"
    ]
   },
   {
@@ -982,7 +982,7 @@
    "lastCommId": null,
    "lastKernelId": null
   },
-  "celltoolbar": "Slideshow",
+  "celltoolbar": "Diaporama",
   "jupytext": {
    "cell_metadata_filter": "-all",
    "notebook_metadata_filter": "-all"
