deploy: ee9c94382bfa6c9d6480fc0c1ce312f5d5d2b0ee

--- a/08-exemple-python.ipynb
+++ b/08-exemple-python.ipynb
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:24.427706Z",
-     "iopub.status.busy": "2020-09-11T07:50:24.427107Z",
-     "iopub.status.idle": "2020-09-11T07:50:24.433474Z",
-     "shell.execute_reply": "2020-09-11T07:50:24.432962Z"
+     "iopub.execute_input": "2020-09-11T10:10:10.195715Z",
+     "iopub.status.busy": "2020-09-11T10:10:10.194767Z",
+     "iopub.status.idle": "2020-09-11T10:10:10.200597Z",
+     "shell.execute_reply": "2020-09-11T10:10:10.200180Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -76,10 +76,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:24.438548Z",
-     "iopub.status.busy": "2020-09-11T07:50:24.437049Z",
-     "iopub.status.idle": "2020-09-11T07:50:24.439228Z",
-     "shell.execute_reply": "2020-09-11T07:50:24.439678Z"
+     "iopub.execute_input": "2020-09-11T10:10:10.203210Z",
+     "iopub.status.busy": "2020-09-11T10:10:10.202845Z",
+     "iopub.status.idle": "2020-09-11T10:10:10.204709Z",
+     "shell.execute_reply": "2020-09-11T10:10:10.204302Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -95,25 +95,17 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:24.443659Z",
-     "iopub.status.busy": "2020-09-11T07:50:24.441851Z",
-     "iopub.status.idle": "2020-09-11T07:50:30.379737Z",
-     "shell.execute_reply": "2020-09-11T07:50:30.378795Z"
+     "iopub.execute_input": "2020-09-11T10:10:10.207352Z",
+     "iopub.status.busy": "2020-09-11T10:10:10.206966Z",
+     "iopub.status.idle": "2020-09-11T10:10:13.837594Z",
+     "shell.execute_reply": "2020-09-11T10:10:13.836694Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -127,10 +119,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:30.393154Z",
-     "iopub.status.busy": "2020-09-11T07:50:30.387321Z",
-     "iopub.status.idle": "2020-09-11T07:50:30.396176Z",
-     "shell.execute_reply": "2020-09-11T07:50:30.395704Z"
+     "iopub.execute_input": "2020-09-11T10:10:13.848087Z",
+     "iopub.status.busy": "2020-09-11T10:10:13.847711Z",
+     "iopub.status.idle": "2020-09-11T10:10:13.850781Z",
+     "shell.execute_reply": "2020-09-11T10:10:13.851144Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -149,10 +141,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:30.401022Z",
-     "iopub.status.busy": "2020-09-11T07:50:30.400065Z",
-     "iopub.status.idle": "2020-09-11T07:50:30.403417Z",
-     "shell.execute_reply": "2020-09-11T07:50:30.402996Z"
+     "iopub.execute_input": "2020-09-11T10:10:13.854820Z",
+     "iopub.status.busy": "2020-09-11T10:10:13.854358Z",
+     "iopub.status.idle": "2020-09-11T10:10:13.856424Z",
+     "shell.execute_reply": "2020-09-11T10:10:13.855992Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -175,10 +167,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:30.409293Z",
-     "iopub.status.busy": "2020-09-11T07:50:30.407895Z",
-     "iopub.status.idle": "2020-09-11T07:50:30.410065Z",
-     "shell.execute_reply": "2020-09-11T07:50:30.410497Z"
+     "iopub.execute_input": "2020-09-11T10:10:13.859578Z",
+     "iopub.status.busy": "2020-09-11T10:10:13.859168Z",
+     "iopub.status.idle": "2020-09-11T10:10:13.860859Z",
+     "shell.execute_reply": "2020-09-11T10:10:13.860526Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -196,10 +188,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2020-09-11T07:50:30.427684Z",
-     "iopub.status.busy": "2020-09-11T07:50:30.427159Z",
-     "iopub.status.idle": "2020-09-11T07:50:30.711672Z",
-     "shell.execute_reply": "2020-09-11T07:50:30.712260Z"
+     "iopub.execute_input": "2020-09-11T10:10:13.875818Z",
+     "iopub.status.busy": "2020-09-11T10:10:13.871491Z",
+     "iopub.status.idle": "2020-09-11T10:10:14.082713Z",
+     "shell.execute_reply": "2020-09-11T10:10:14.083016Z"
     },
     "lines_to_next_cell": 2,
     "slideshow": {
@@ -210,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f2639077370>"
+       "<matplotlib.collections.PathCollection at 0x7fc66e712f10>"
       ]
      },
      "execution_count": 7,
